--- a/core/pom.xml
+++ b/core/pom.xml
@@ -92,6 +92,11 @@
             <classifier>apis</classifier>
         </dependency>
         <dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5</version>
+</dependency>
+        <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.models.api</artifactId>
         </dependency>
