--- a/core/pom.xml
+++ b/core/pom.xml
@@ -48,8 +48,8 @@
                 </executions>
                 <configuration>
                     <instructions>
-                        <!-- Import any version of javax.inject, to allow running on multiple versions of AEM -->
-                        <Import-Package>javax.inject;version=0.0.0,*</Import-Package>
+                         <!-- Import any version of javax.inject, to allow running on multiple versions of AEM -->
+                        <Import-Package>javax.inject;com.day.cq.mailer;version=0.0.0,*</Import-Package>
                         <Sling-Model-Packages>
                             com.fittanylion.aem.core
                         </Sling-Model-Packages>
@@ -96,6 +96,14 @@
     <artifactId>httpclient</artifactId>
     <version>4.5</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-email</artifactId>
+    <version>1.1</version>
+</dependency>
+
+
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.models.api</artifactId>
