--- a/core/pom.xml
+++ b/core/pom.xml
@@ -102,6 +102,11 @@
     <artifactId>commons-email</artifactId>
     <version>1.1</version>
 </dependency>
+<dependency>
+    <groupId>com.day.commons</groupId>
+    <artifactId>day.commons.datasource.poolservice</artifactId>
+    <version>1.0.6</version>
+</dependency>
 
 
         <dependency>
