--- a/core/pom.xml
+++ b/core/pom.xml
@@ -125,5 +125,16 @@
             <groupId>junit-addons</groupId>
             <artifactId>junit-addons</artifactId>
         </dependency>
+        <dependency>  
+<groupId>org.apache.poi</groupId>  
+<artifactId>poi</artifactId>  
+<version>3.16</version>  
+</dependency>  
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->  
+<dependency>  
+<groupId>org.apache.poi</groupId>  
+<artifactId>poi-ooxml</artifactId>  
+<version>3.16</version>  
+</dependency>
     </dependencies>
 </project>
